Fixed navbar alignment

--- a/pages/change-password.css
+++ b/pages/change-password.css
@@ -32,7 +32,9 @@ body{
 }
 .navbar h2{
     text-align: center;
-    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
 }
 
 
