--- a/pages/create-pin.css
+++ b/pages/create-pin.css
@@ -25,14 +25,16 @@ body{
 .navbar a{
     text-decoration: none;
     color: white;
-    margin: auto 0px auto 20px;
+   /* margin: auto 0px auto 20px;*/
 }
 .navbar a i{
     font-size: 32px;
 }
 .navbar h2{
     text-align: center;
-    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
 }
 
 
